--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,9 @@
 [submodule "vim/bundle/vim-sensible"]
 	path = vim/bundle/vim-sensible
 	url = https://github.com/tpope/vim-sensible
+[submodule "vim/bundle/gmsh.vim"]
+	path = vim/bundle/gmsh.vim
+	url = https://github.com/nschloe/gmsh.vim
+[submodule "vim/bundle/vim-octave"]
+	path = vim/bundle/vim-octave
+	url = https://github.com/jvirtanen/vim-octave
