--- a/tmux.conf
+++ b/tmux.conf
@@ -9,10 +9,10 @@ set-window-option -g utf8
 unbind [
 bind Escape copy-mode
 
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
+bind -r h select-pane -L
+bind -r j select-pane -D
+bind -r k select-pane -U
+bind -r l select-pane -R
 bind -r C-h resize-pane -L
 bind -r C-j resize-pane -D
 bind -r C-k resize-pane -U
@@ -27,6 +27,9 @@ bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
 bind c new-window -c "#{pane_current_path}"
 
+bind-key J command-prompt -p "join pane from:"  "join-pane -s '%%'"
+bind-key S command-prompt -p "send pane to:"  "join-pane -t '%%'"
+
 bind-key -t vi-copy 'v' begin-selection
 bind-key -t vi-copy 'y' copy-selection
 bind p paste-buffer
@@ -40,3 +43,5 @@ bind-key -n C-S-Right swap-window -t +1
 set -g history-limit 10000
 
 set-option -s set-clipboard off
+
+set -g default-terminal xterm
