--- a/tmux.conf
+++ b/tmux.conf
@@ -1,10 +1,8 @@
 set -g prefix C-a
 bind C-a send-prefix
 
-set-window-option -g mode-keys vi
-set-option -g status-keys vi
-
-set-window-option -g utf8
+setw -g mode-keys vi
+set -g status-keys vi
 
 unbind [
 bind Escape copy-mode
@@ -21,7 +19,7 @@ bind -r C-l resize-pane -R
 bind m previous-window
 
 set -g default-terminal "screen-256color"
-setw -g mode-mouse off
+setw -g mouse off
 
 bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
@@ -41,9 +39,6 @@ bind-key -n C-S-Left swap-window -t -1
 bind-key -n C-S-Right swap-window -t +1
 
 set -g history-limit 10000
-
-set-option -s set-clipboard off
-
+set -s set-clipboard off
 set -g default-terminal xterm
-
-set-option -g renumber-windows on
+set -g renumber-windows on
