--- a/tmux.conf
+++ b/tmux.conf
@@ -7,6 +7,11 @@ set -g status-keys vi
 unbind [
 bind Escape copy-mode
 
+unbind Right
+unbind Left
+unbind Up
+unbind Down
+
 bind -r h select-pane -L
 bind -r j select-pane -D
 bind -r k select-pane -U
