--- a/tmux.conf
+++ b/tmux.conf
@@ -4,6 +4,8 @@ bind C-a send-prefix
 setw -g mode-keys vi
 set -g status-keys vi
 
+set -sg escape-time 0
+
 unbind [
 bind Escape copy-mode
 
@@ -12,23 +14,36 @@ unbind Left
 unbind Up
 unbind Down
 
-bind -r h select-pane -L
-bind -r j select-pane -D
-bind -r k select-pane -U
-bind -r l select-pane -R
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
 bind -r C-h resize-pane -L
 bind -r C-j resize-pane -D
 bind -r C-k resize-pane -U
 bind -r C-l resize-pane -R
 
+bind C-n next-window
 bind m previous-window
+bind C-m previous-window
 
-set -g default-terminal "screen-256color"
-setw -g mouse off
+set -g mouse off
+set -g default-terminal xterm-256color
 
 bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
 bind c new-window -c "#{pane_current_path}"
+bind + break-pane
+
+unbind [ ; unbind C-[
+unbind ] ; unbind C-]
+bind [ swap-window -t -1 \; previous-window
+bind C-[ swap-window -t -1 \; previous-window
+bind ] swap-window -t +1 \; next-window
+bind C-] swap-window -t +1 \; next-window
+
+unbind PageUp
+bind C-u copy-mode -u
 
 bind-key J command-prompt -p "join pane from:"  "join-pane -s '%%'"
 bind-key S command-prompt -p "send pane to:"  "join-pane -t '%%'"
@@ -36,10 +51,6 @@ bind-key S command-prompt -p "send pane to:"  "join-pane -t '%%'"
 bind C-p run "tmux set-buffer \"$(xclip -o -selection c)\"; tmux paste-buffer"
 bind C-y run "tmux save-buffer - | xclip -i -selection c"
 
-bind-key -n C-S-Left swap-window -t -1
-bind-key -n C-S-Right swap-window -t +1
-
-set -g history-limit 10000
+set -g history-limit 100000
 set -s set-clipboard off
-set -g default-terminal xterm
 set -g renumber-windows on
